--- a/15-Godiva.tex
+++ b/15-Godiva.tex
@@ -184,7 +184,11 @@ Input data preparation consists in the following actions:
 
 %\vspace{-0.5cm}
 
-To perform an action, one has to configure the \file{driver} file and give in the corresponding flag values and run the \command{godiva} file script (this will launch the \command{divadoall} script and check for possible severe errors). For each action, a specific inputs are needed:
+To perform an action, one has to configure the \file{driver} file and give in the corresponding flag values and run the
+\command{godiva} file script (this will launch the \command{divadoall} script and check for possible severe errors). 
+The standard output (stdout) and error (sdterr) will be stored in \file{divadoall.log} while the error and warning lines will be found in 
+\file{divadoall.severeerrors}, \\ \file{divadoall.errors} and \file{divadoall.warnings}.
+For each action, specific inputs are needed:
 
 
 %\vspace{1.5cm}
@@ -258,7 +262,8 @@ Data extraction  & A subdirectory {\directory{divadata}} is created in \\
  Coastlines generation &  A {\directory{newinput}} subdirectory which contains:\\
  and ``Advection''     &  a subdirectory \directory{divaparam} with the {\file{coast.cont.$100xx$}} \\
   field generation     & and  a subdirectory \directory{divaUVcons\_all} containing the\\
-                       & velocity field files \\
+                       & velocity field files. \\
+                       & All these files are also copied to subdirectories of \directory{input}. \\
     &   \\
 \hline
     &   \\
@@ -633,11 +638,17 @@ All actions performed by \command{divadoall} are prescribed in the file \file{dr
 
 If there is a \file{qflist} file, the selection with \file{divaselectorODV4} will only use those measurements for which the quality flag is one of those found in the file \file{qflist}. In the absence of \file{qflist} (or if \file{qflist} is empty), no quality flag analysis is done and all data taken.
 
-{\bf Note:} the files without any depth axis are treated separately by the \command{divano\-depthODV4}. This script also handles the current direction (CurrDir [deg T]) and speed (CurrSpd [cm/s]) and transforms them into x-y components (North, East). 
-
 {\bf Note:} you can specify several ODV4 spreadsheet files as input files, one file name (or full path) per line in \file{datasource} file, {\it they must have the same variables naming convention}. You can also specify different quality flags for each file by adding these values after the file name (separated by a space). At the moment, a maximum of two quality flags per file is admitted. In the absence of quality flag after the file name, \command{Diva} simply uses the values provided in \file{qflist}.
 
 %{\bf Note:} the weight of data is increased to 1.1 if the file name contains ``CTD,PFL,MRB,DRB or ARGO'' and decreased to 0.5 if it contains ``APB,XBT or MBT'', due to differences in the accuracy of these instruments. This default behaviour can be cancelled by setting the flag\_weight to 0 (in \file{divaselectorODV4}). 
+
+{\bf Note:} the files without any depth axis are treated separately by \command{divano\-depthODV4}. The minimum and maximum
+instrument depth (metadata) are used to recreate an artificial depth axis which can be used by diva. Please note that, in this case,
+each file without depth axis (in datasource) should contain only one location (otherwise, the other ones are not used). 
+This script also handles the current direction (CurrDir [deg T]) and speed (CurrSpd [cm/s]) and transforms them
+into x-y components (North, East). In this second case, depth axis has to be present. In any case, \command{divanodepthODV4}
+can only deal with a maximum of 2 scalar variables (+ current direction and speed). If you need to analyse more than 2 scalar 
+variables, you can proceed by steps (just changing the \file{varlist}).
 
 \item {\bf Boundary lines and coastlines generation}: Possible flag values are $0$, $1$, $2$ and $3$. When this action is activated (flag $\geq 1$), you must provide in the \directory{input} directory the files \file{TopoInfo.dat} and  \file{topo.grd} in addition to \file{contour.depth} file.
               \begin{itemize}
