Sylvain Watelet - minor update of doc

--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -43,7 +43,7 @@ awk '{print $2,$1,$3}' infile > outfile
 
 \subsection{Method 1: using \diva on web}
 
-Go to \url{http://gher-diva.phys.ulg.ac.be/web-vis-test/diva.html}, upload any data (it can be the example provided on the web).
+Go to \url{http://gher-diva.phys.ulg.ac.be/web-vis/diva.html}, upload any data (it can be the example provided on the web).
 It is faster to use a small file, and you can even create a simple file with 2 measurements in the lower left and upper right corners of 
 your region.
 \begin{verbatim}
