--- a/3-DivaConditionUse.tex
+++ b/3-DivaConditionUse.tex
@@ -84,7 +84,7 @@ Various example files are provided for different situations.
 \item This document:
 
 
-Troupin, C.; Ouberdous, M.; Sirjacobs, D.; Alvera-Azcárate, A.; Barth, A.; Toussaint, M.-E. \& Beckers, J.-M. (2013) \diva User Guide.\\
+Troupin, C.; Ouberdous, M.; Sirjacobs, D.; Alvera-Azcárate, A.; Barth, A.; Toussaint, M.-E.; Watelet, S. \& Beckers, J.-M. (2013) \diva User Guide.\\
 \url{http://modb.oce.ulg.ac.be/mediawiki/index.php/Diva_documents}
 
 
