--- a/16-DivaProblems.tex
+++ b/16-DivaProblems.tex
@@ -244,6 +244,11 @@ However, when data locations are very close and values are very different and a 
 \caption[Results with two data points with values 1 and 3, located in the domain center (0,0), with a large signal-to-noise ratio.]{Results with two data points with values 1 and 3, located in the domain center (0,0), with a large signal-to-noise ratio. The analyzed field at (0,0) is $\approx 2$.\label{fig:results_twopoints_center}}
 \end{figure}
 
+\textbf{New} :
+You can also activate the weighting option in the driver file (DIVA 4D)
+in order to give less importance to measurements very close (in space and time) to other ones. This option will limit 
+the above artefacts. 
+Further details in Section \ref{4Dclim}.
 
 \subsection{How to run \diva in operational or real-time mode?}
 %---------------------------------------------------------------------------
