--- a/DivaUserGuide.tex
+++ b/DivaUserGuide.tex
@@ -73,7 +73,7 @@
 \input{18-divademecum} % --> to prepare (2D and 4D)
 \input{19-DivaLinks}
 
-\bibliography{20-DivaPublications}
+\bibliography{20-DivaPublications.bib}
 
 \listoffigures
 \listoftables
