--- a/4-DivaInstallation2.tex
+++ b/4-DivaInstallation2.tex
@@ -34,9 +34,10 @@ The basic requirements to compile and run \diva are:
 to see which libraries are still missing (in our case \texttt{sasl}) and therefore to install them with the cygwin installer.  
 \end{enumerate}
 
-Other requirement :
+Other requirements :
 \begin{enumerate}
  \item dos2unix (on Linux Ubuntu : sudo apt-get install dos2unix, on Cygwin : launch the setup.exe and tick ``dos2unix'').
+ \item bc (on Linux Ubuntu : sudo apt-get install bc, on Cygwin : launch the setup.exe and tick ``bc'').
 \end{enumerate}
 
 
