--- a/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_general.tex
+++ b/DivaWorkshop/SlidesDivaLecce2016/DivaLecce2016_general.tex
@@ -11,37 +11,37 @@
 
 
 \begin{frame}
-\frametitle{Welcome to Calvi}
+\frametitle{Welcome to Lecce}
 \footnotesize
 
 \onslide*<1>{
 \begin{figure}
 \centering
-\includegraphics[width=.99\textwidth]{IMG_7335}
+\includegraphics[width=.99\textwidth]{Lecce1}
 \end{figure}
 }
 
-\onslide*<2>{
+%\onslide*<2>{
 
-\begin{columns}[totalwidth=\textwidth]
+%\begin{columns}[totalwidth=\textwidth]
 
-\column{.5\textwidth}
-\begin{figure}
-\centering
-\includegraphics[width=.8\textwidth]{stebelle}
-\end{figure}
+%\column{.5\textwidth}
+%\begin{figure}
+%\centering
+%\includegraphics[width=.8\textwidth]{stebelle}
+%\end{figure}
 
-\column{.5\textwidth}
+%\column{.5\textwidth}
 
-\begin{description}
-\item[Origin:] recteur Marcel Dubuisson (1972)
-\item[Architect:] Claude Strebelle (1917-2010) 
-\item[Management:] STARESO S.A. (1989)
-\end{description}
-\url{http://www.stareso.ulg.ac.be}
+%\begin{description}
+%\item[Origin:] recteur Marcel Dubuisson (1972)
+%\item[Architect:] Claude Strebelle (1917-2010) 
+%\item[Management:] STARESO S.A. (1989)
+%\end{description}
+%\url{http://www.stareso.ulg.ac.be}
 
-\end{columns}
-}
+%\end{columns}
+%}
 
 %Cap de la Revellata 
 % %pollution inexistante
