--- a/DivaWorkshop/SlidesDivaLecce2016/GHERheader2015.tex
+++ b/DivaWorkshop/SlidesDivaLecce2016/GHERheader2015.tex
@@ -60,8 +60,8 @@ pdftoolbar=true,
 pdfmenubar=true,
 pdfwindowui=true,
 pdfauthor={Alexander Barth{,} Aida Alvera-Azc\'{a}rate{,} Mohamed~Ouberdous{,} Charles~Troupin{,} Sylvain~Watelet \& Jean-Marie~Beckers},
-pdfsubject={DIVA workshop 2015},
-pdftitle={DIVA workshop 2015},
+pdfsubject={DIVA Lecce 2016},
+pdftitle={DIVA Lecce 2015},
 bookmarksopenlevel=0,
 colorlinks=true,
 linkcolor=blue,anchorcolor=black,%
@@ -76,8 +76,8 @@ pdffitwindow=true
 \author[Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous, Charles~Troupin, Sylvain~Watelet \& Jean-Marie~Beckers]{Alexander Barth, Aida Alvera-Azc\'{a}rate, Mohamed~Ouberdous,\\
  Charles~Troupin, Sylvain~Watelet \& Jean-Marie~Beckers}
   
-\title[]{\diva workshop 2015}
-\date{Calvi (France), 9--14 October 2015}
+\title[]{\diva Lecce 2016}
+\date{Lecce (Italy), 11--14 April 2016}
 
 
 %--------------------------------
@@ -123,7 +123,7 @@ literate={\$}{{\textcolor{red}{\$}}}1
 
 %-------------------------------------------------------------------------
 \newcommand{\maketitlepage}{{
-\usebackgroundtemplate{\hspace{-1cm}\tikz\node[opacity=0.2]{\includegraphics[height=1.05\paperheight]{background3.jpg}};}
+\usebackgroundtemplate{\hspace{-1cm}\tikz\node[opacity=0.2]{\includegraphics[height=1.05\paperheight]{Lecce1.jpg}};}
 \begin{frame}
 \centering
 \footnotesize
